styles/style.css
* {
  font-family: "rubik", sans-serif;
  font-weight: 300;
  box-sizing: border-box;
  padding: 0;
  margin: 0;
  font-display: auto;
}
@font-face {
  font-family: "rubik", sans-serif;
  src: url("your-font.woff2") format("woff2");
  font-display: swap; /* or auto, block, fallback */
}

body {
  background: linear-gradient(to bottom right, #141414 50%, #141414);
  height: 100%;
  scroll-behavior: smooth;
}
p,
h2 {
  font-weight: 300 !important;
}

main {
  padding-top: 150px;
}

.movie-container {
  width: 100%;
  max-width: 110rem;

  margin: 0 auto;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
  gap: 1rem;

  z-index: 1;
}

.image-container {
  position: relative;
  display: grid;
}
.image-container:hover img {
  filter: blur(4px) brightness(50%);
  cursor: pointer;
}
.image-container:hover .movie-name {
  opacity: 1;
}

.movie-name {
  position: absolute;
  top: 50%;
  /* left: 0; */
  justify-self: center;
  /* transform: translate(50%, -50%); */
  /* width: 100%; */
  text-align: center;
  font-size: 18px;
  font-weight: 700;
  color: white;
  opacity: 0;
  transition: opacity 0.5s;
  font-weight: 300;
}

img {
  width: 100%;
  height: 100%;
  object-fit: contain;
  justify-self: center;
}

.info-modal,
.info-modal-two,
.info-modal-three {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 100%;
  max-width: 1050px;
  background-color: white;

  display: grid;
  grid-template-columns: 1fr 2fr;
  /* filter: blur(0px) !important; */
  z-index: 999;
}

.modal-image,
.modal-image-two,
.modal-image-three {
  object-fit: cover;
}
.info-modal p,
.info-modal-two p,
.info-modal-three p {
  padding: 10px;
}
.info-inner p,
.info-inner-two p,
.info-inner-three p {
  color: #fff;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 300;
}
.exit-modal,
.exit-modal-two,
.exit-modal-three {
  position: absolute;
  top: 10px;
  right: 10px;
  border: none;
  color: white;
  background-color: transparent;
}

.wrapper {
  display: block;
  width: 100%;
  height: 100%;
  filter: blur(4px) !important;
  z-index: 2;
}

.invisible,
.invisible-two,
.invisible-three {
  display: none;
}

.poster-path {
  height: 234px !important;
  object-fit: cover !important;
}
.backdrop-path {
  height: 234px;
  object-fit: cover;
}
/* iframe styles */
.youtube-container {
  width: 100%;
  max-width: 100rem;
  height: 100%;
  min-height: 194px;
  max-height: 560px;
  margin: 0 auto;
  display: grid;
  grid-template-columns: 1fr 2fr;
  padding: 1rem;
}

iframe {
  height: 100%;
}
.youtube-frame {
  z-index: 2 !important;
}

.trailer-info {
  padding: 1rem;
  z-index: 1;
}

.trailer-info p {
  display: inline-block;
  margin: 0;
}

footer {
  padding: 10px;
}
footer p {
  color: #fff;
}
footer a {
  color: #fff;
  text-decoration: underline;
}

@media only screen and (min-width: 901px) {
  .backdrop-path,
  .poster-path {
    max-width: 375px;
    object-fit: contain;
  }
}

/* x */
.youtube-container-min {
  grid-template-columns: 1fr;
  position: relative;
}
.trailer-info-min {
  padding: 1rem;
  display: flex;
  justify-content: center;
  align-items: center;

  width: 100%;
  height: 100%;
  position: absolute;
}

.trailer-paragraph-min {
  /* font-size: 20px; */
  display: none !important;
}

.iframe-min {
  padding: 0rem 15px;
}
/* x */

.overlay-body {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: transparent;
  z-index: 10;
  display: block;
}
.overlay-disappear {
  display: none;
}
.overlay-appear {
  display: block;
}
.type {
  color: red;
}

@media only screen and (max-width: 600px) {
  .info-inner p,
  .info-inner-two p,
  .info-inner-three p {
    font-size: 15px;
  }
}

@media only screen and (max-width: 400px) {
  .info-inner p,
  .info-inner-two p,
  .info-inner-three p {
    font-size: 12px;
  }
}

@media only screen and (max-width: 901px) {
  .youtube-container {
    position: relative;
    grid-template-columns: 1fr;
  }
  .trailer-info {
    position: absolute;
    width: 100%;
    top: 0;
    bottom: 0;
  }
}

